2004-06-07  Juanma Barranquero  <lektu@terra.es>

	* editfns.c (Fuser_login_name, Ffloat_time, Fencode_time)
	(Fcurrent_time_string, Fcurrent_time_zone)
	(Finsert_buffer_substring, Ftranspose_regions): Doc fixes.

2004-06-07  Miles Bader  <miles@gnu.org>

	* xfaces.c (struct named_merge_point): New type.
	(push_named_merge_point): New function.
	(merge_named_face): New function.
	(merge_face_ref, face_at_buffer_position, face_at_string_position):
	Use `merge_named_face'.
	(merge_face_inheritance): Function removed.
	(merge_face_ref): Renamed from `merge_face_vector_with_property'.
	Add new `err_msgs' and `named_merge_points' args.  Return error
	status.  Only print error messages if ERR_MSGS is true.  Don't try to
	do :inherit attribute validation.
	(merge_face_heights): Handle `unspecified' in both directions.
	(merge_face_vectors): Rename `cycle_check' arg to `named_merge_points'.
	Call `merge_face_ref' instead of `merge_face_inheritance'.
	(Fdisplay_supports_face_attributes_p, Fface_attributes_as_vector)
	(compute_char_face, face_at_buffer_position)
	(face_at_string_position): Call `merge_face_ref' instead of
	`merge_face_vector_with_property'.

2004-06-07  Kenichi Handa  <handa@m17n.org>

	* coding.c (find_safe_codings): Check NILP (safe_codings) only at
	the necessary places.

2004-06-07  Kim F. Storm  <storm@cua.dk>

	* process.c (Fdelete_process): Undo 2004-05-28 change.
	Instead, call status_notify also for network process.
	(status_message): Use process instead of status as arg.
	Give messages "deleted" or "connection broken by remote peer" for
	an exited network process.
	(status_notify): Change call to status_message.
	(read_process_output): Increase readmax to 4096.  Do not increase
	buffer size for datagram channels (default is now large enough).

2004-06-06  Steven Tamm  <tamm@Steven-Tamms-Computer.local>

	* macfns.c (x_create_tip_frame): Fix Mac OS X 10.1 compilation
	problem due to newly defined variable.

2004-06-06  Miles Bader  <miles@gnu.org>
